fix: Update M5Stack board manager URL in GitHub Actions

--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Configure Arduino CLI for ESP32 and M5Stack
       run: |
         arduino-cli config init
-        arduino-cli config set board_manager.additional_urls "https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json,http://www.m5stack.com/download/package_m5stack_index.json"
+        arduino-cli config set board_manager.additional_urls "https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json,https://static-cdn.m5stack.com/resource/arduino/package_m5stack_index.json"
         arduino-cli core update-index
 
     - name: Install ESP32 core
