Fix: Add 'espressif/mqtt' to idf_component.yml and remove 'mqtt' from CMakeLists.txt REQUIRES list.

--- a/firmware/main/idf_component.yml
+++ b/firmware/main/idf_component.yml
@@ -1,3 +1,4 @@
 dependencies:
   espp/bmi270: ">=1.0.0" # Use a version range or specific version as appropriate
   idf: "*"
+  espressif/mqtt: "^1.0.0" # Placeholder version, will default to latest compatible
