--- a/firmware/main/idf_component.yml
+++ b/firmware/main/idf_component.yml
@@ -2,3 +2,4 @@ dependencies:
   espp/bmi270: ">=1.0.0" # Use a version range or specific version as appropriate
   idf: "*"
   espressif/mqtt: "^1.0.0" # Placeholder version, will default to latest compatible
+  cjson: "*" # Assuming it's in the registry and can use any version
