--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -33,7 +33,8 @@ jobs:
           echo "Warning: ESP-IDF export.sh not found in common locations. idf.py might not be in PATH."
         fi
         
-        idf.py build \
+        idf.py reconfigure
+        idf.py build -v \
           -DCONFIG_WIFI_SSID="${{ secrets.WIFI_SSID }}" \
           -DCONFIG_WIFI_PASSWORD="${{ secrets.WIFI_PASSWORD }}" \
           -DCONFIG_MQTT_HOST="${{ secrets.MQTT_HOST }}" \
