Use add_compile_definitions in firmware CMake
Replace target_compile_definitions(${PROJECT_NAME} PRIVATE ...) with add_compile_definitions(...) so CONFIG_* values are added as global preprocessor macros. Changes apply to WIFI, MQTT, Telegram and Static IP settings, simplifying CMake handling and avoiding reliance on the specific target being available at this point.

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -8,52 +8,52 @@ project(m5_doorsensor)
 # They are then defined as preprocessor macros for the main component.
 # WIFI
 if(DEFINED CONFIG_WIFI_SSID)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "WIFI_SSID=\"${CONFIG_WIFI_SSID}\"")
+    add_compile_definitions("WIFI_SSID=\"${CONFIG_WIFI_SSID}\"")
 endif()
 if(DEFINED CONFIG_WIFI_PASSWORD)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "WIFI_PASSWORD=\"${CONFIG_WIFI_PASSWORD}\"")
+    add_compile_definitions("WIFI_PASSWORD=\"${CONFIG_WIFI_PASSWORD}\"")
 endif()
 
 # MQTT
 if(DEFINED CONFIG_MQTT_HOST)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "MQTT_HOST=\"${CONFIG_MQTT_HOST}\"")
+    add_compile_definitions("MQTT_HOST=\"${CONFIG_MQTT_HOST}\"")
 endif()
 if(DEFINED CONFIG_MQTT_PORT)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "MQTT_PORT=${CONFIG_MQTT_PORT}")
+    add_compile_definitions("MQTT_PORT=${CONFIG_MQTT_PORT}")
 endif()
 if(DEFINED CONFIG_MQTT_USERNAME)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "MQTT_USERNAME=\"${CONFIG_MQTT_USERNAME}\"")
+    add_compile_definitions("MQTT_USERNAME=\"${CONFIG_MQTT_USERNAME}\"")
 endif()
 if(DEFINED CONFIG_MQTT_PASSWORD)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "MQTT_PASSWORD=\"${CONFIG_MQTT_PASSWORD}\"")
+    add_compile_definitions("MQTT_PASSWORD=\"${CONFIG_MQTT_PASSWORD}\"")
 endif()
 # MQTT_CLIENT_ID is hardcoded in the C++ for now, but could also be a secret.
 # target_compile_definitions(${PROJECT_NAME} PRIVATE "MQTT_CLIENT_ID=\"${CONFIG_MQTT_CLIENT_ID}\"")
 
 # Telegram
 if(DEFINED CONFIG_TELEGRAM_ENABLED)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "TELEGRAM_ENABLED=${CONFIG_TELEGRAM_ENABLED}")
+    add_compile_definitions("TELEGRAM_ENABLED=${CONFIG_TELEGRAM_ENABLED}")
 endif()
 if(DEFINED CONFIG_TELEGRAM_BOT_TOKEN)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "TELEGRAM_BOT_TOKEN=\"${CONFIG_TELEGRAM_BOT_TOKEN}\"")
+    add_compile_definitions("TELEGRAM_BOT_TOKEN=\"${CONFIG_TELEGRAM_BOT_TOKEN}\"")
 endif()
 if(DEFINED CONFIG_TELEGRAM_CHAT_ID)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "TELEGRAM_CHAT_ID=\"${CONFIG_TELEGRAM_CHAT_ID}\"")
+    add_compile_definitions("TELEGRAM_CHAT_ID=\"${CONFIG_TELEGRAM_CHAT_ID}\"")
 endif()
 
 # Static IP
 if(DEFINED CONFIG_USE_STATIC_IP)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "USE_STATIC_IP=${CONFIG_USE_STATIC_IP}")
+    add_compile_definitions("USE_STATIC_IP=${CONFIG_USE_STATIC_IP}")
 endif()
 if(DEFINED CONFIG_STATIC_IP_ADDRESS_OCTETS)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "STATIC_IP_ADDRESS=\"${CONFIG_STATIC_IP_ADDRESS_OCTETS}\"")
+    add_compile_definitions("STATIC_IP_ADDRESS=\"${CONFIG_STATIC_IP_ADDRESS_OCTETS}\"")
 endif()
 if(DEFINED CONFIG_STATIC_GATEWAY_OCTETS)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "STATIC_GATEWAY=\"${CONFIG_STATIC_GATEWAY_OCTETS}\"")
+    add_compile_definitions("STATIC_GATEWAY=\"${CONFIG_STATIC_GATEWAY_OCTETS}\"")
 endif()
 if(DEFINED CONFIG_STATIC_SUBNET_OCTETS)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "STATIC_SUBNET=\"${CONFIG_STATIC_SUBNET_OCTETS}\"")
+    add_compile_definitions("STATIC_SUBNET=\"${CONFIG_STATIC_SUBNET_OCTETS}\"")
 endif()
 if(DEFINED CONFIG_STATIC_DNS_OCTETS)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE "STATIC_DNS=\"${CONFIG_STATIC_DNS_OCTETS}\"")
+    add_compile_definitions("STATIC_DNS=\"${CONFIG_STATIC_DNS_OCTETS}\"")
 endif()
