--- a/firmware/idf_component.yml
+++ b/firmware/idf_component.yml
@@ -1,5 +1,9 @@
 dependencies:
-  espp/bmi270: ">=1.0.0" # Use a version range or specific version as appropriate
-  idf: "*"
-  espressif/mqtt: "^1.0.0" # Placeholder version, will default to latest compatible
-  cjson: "*" # Assuming it's in the registry and can use any version
+  espressif/mqtt: "^1.0.0"
+  espp/bmi270: "^1.0.34"
+  espp/logger: "^1.0.34"
+  espp/base_peripheral: "^1.0.34"
+  espp/math: "^1.0.34"
+  espp/format: "^1.0.34"
+  idf: ">=5.0"
+  cjson: "*"
