Add MQTT PC alert listener and update docs
Add a Windows desktop MQTT listener (firmware/alert_listener.py) to show notifications and beep on door OPEN events (uses paho-mqtt and plyer). Refresh README to target the M5StickC Plus 2 with updated usage, features and flashing instructions. Update .gitignore to exclude firmware build artifacts, sdkconfig and legacy secrets; remove legacy secrets and sdkconfig.old. Build outputs and various firmware build/cache files were also updated as part of a local build.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-firmware/secrets.h
+# ESP-IDF specific
+firmware/build/
+firmware/sdkconfig
+firmware/sdkconfig.old
+firmware/managed_components/
+firmware/dependencies.lock
+
+# OS specific
 .DS_Store
+Thumbs.db
+
+# Secrets (legacy)
+firmware/secrets.h
