Add MQTT guide, docs & update alert listener
Add MQTT_SETUP_GUIDE.md and a M5StickC Plus 2 specifications doc; add .vscode/settings.json. Update README with new features (faster alert, WiFi config portal and status UI) and WiFi setup instructions. Modify firmware/alert_listener.py to point to broker.emqx.io and use topic m5door/tony/state (clean up unused/duplicated runtime code). Update firmware CMake/SDK files and main/door_sensor.cpp (build artifacts and sdkconfig changed as part of a rebuild). These changes provide user setup docs and sync the listener and firmware configuration with the updated network/topic settings.

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -11,4 +11,5 @@ idf_component_register(SRCS "door_sensor.cpp"
                             esp_adc
                             esp_http_client
                             esp_lcd
-                            esp_pm)
+                            esp_pm
+                            esp_http_server)
